language/move-lang/tests/move_check/translated_ir_tests/commands/assign_wrong_type.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/assign_wrong_type.move:6:5 ───
   │
 6 │     x = false
   │     ^ Invalid assignment to local 'x'
   ·
 6 │     x = false
   │         ----- The type: 'bool'
   ·
 5 │     let x: u64;
   │            --- Is not compatible with: 'u64'
   │

